force-app/main/default/objects/Architecture__c/fields/Primary_Product_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Primary_Product_of_Interest__c</fullName>
    <label>Primary Product of Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Health Cloud</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Commerce Cloud</fullName>
            </value>
            <value>
                <fullName>CPQ</fullName>
            </value>
            <value>
                <fullName>Salesforce.org NPSP</fullName>
            </value>
            <value>
                <fullName>Salesforce.org HEDA</fullName>
            </value>
            <value>
                <fullName>Datorama</fullName>
            </value>
            <value>
                <fullName>C360 Data Manager</fullName>
            </value>
            <value>
                <fullName>Sustainability Cloud</fullName>
            </value>
            <value>
                <fullName>Qiup</fullName>
            </value>
            <value>
                <fullName>My Trailhead</fullName>
            </value>
            <value>
                <fullName>B2B Commerce</fullName>
            </value>
            <value>
                <fullName>Salesforce DMP</fullName>
            </value>
            <value>
                <fullName>Data Studio</fullName>
            </value>
            <value>
                <fullName>Sales Cloud</fullName>
            </value>
            <value>
                <fullName>Service Cloud</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud</fullName>
            </value>
            <value>
                <fullName>Salesforce Platform</fullName>
            </value>
            <value>
                <fullName>Community Cloud</fullName>
            </value>
            <value>
                <fullName>Chatter</fullName>
            </value>
            <value>
                <fullName>Analytics Cloud</fullName>
            </value>
            <value>
                <fullName>Work.com</fullName>
            </value>
            <value>
                <fullName>Data.com</fullName>
            </value>
            <value>
                <fullName>Pardot</fullName>
            </value>
            <value>
                <fullName>Heroku</fullName>
            </value>
            <value>
                <fullName>Desk.com</fullName>
            </value>
            <value>
                <fullName>Salesforce 1 Platform</fullName>
            </value>
            <value>
                <fullName>Financial Service Cloud</fullName>
            </value>
            <value>
                <fullName>Salesforce Maps</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>