force-app/main/default/objects/Architecture__c/fields/Project_Health__c.field-meta.xml
<CustomField>
    <fullName>Project_Health__c</fullName>
    <description>Created by: YB, Business Unit:BWTC,Purpose: for architecture app</description>
    <inlineHelpText>Select to give a glance of Project Health e.g On Truck, At Risk</inlineHelpText>
    <label>Project Health</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Project_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Track</fullName>
            </value>
            <value>
                <fullName>At Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>