force-app/main/default/objects/Architecture__c/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By:MS Business Unit:BWTC Purpose:for Architecture app</description>
    <label>Project Name</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Architectures</relationshipLabel>
    <relationshipName>Architectures</relationshipName>
    <type>Lookup</type>
</CustomField>