force-app/main/default/objects/Architecture__c/fields/Project_Status__c.field-meta.xml
<CustomField>
    <fullName>Project_Status__c</fullName>
    <description>Created by: YB, Business Unit:BWTC,Purpose: for architecture app</description>
    <label>Project Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Submitted to Partner</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
                <isActive>false</isActive>
                <label>On Hold</label>
            </value>
            <value>
                <fullName>Terminated</fullName>
                <isActive>false</isActive>
                <label>Terminated</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>