force-app/main/default/objects/Architecture__c/fields/Purchasing_Time_Frame__c.field-meta.xml
<CustomField>
    <fullName>Purchasing_Time_Frame__c</fullName>
    <description>Created by: YB, Business Unit:BWTC,Purpose: for architecture app</description>
    <label>Purchasing Time Frame</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediately</fullName>
            </value>
            <value>
                <fullName>1-3 months</fullName>
            </value>
            <value>
                <fullName>3-6 months</fullName>
            </value>
            <value>
                <fullName>6-12 months</fullName>
            </value>
            <value>
                <fullName>12+ months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>