force-app/main/default/objects/Architecture__c/fields/Sales_Cloud__c.field-meta.xml
<CustomField>
    <fullName>Sales_Cloud__c</fullName>
    <description>Created by: YB, Business Unit:BWTC,Purpose: for architecture app</description>
    <label>Sales Cloud</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Core Salesforce Maps</fullName>
            </value>
            <value>
                <fullName>CPQ</fullName>
            </value>
            <value>
                <fullName>Einstein for Sales</fullName>
            </value>
            <value>
                <fullName>Sales Cloud</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>