force-app/main/default/objects/Architecture__c/fields/Sales_Type__c.field-meta.xml
<CustomField>
    <fullName>Sales_Type__c</fullName>
    <description>Created by: YB, Business Unit:BWTC,Purpose: for architecture app</description>
    <label>Sales Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Sign Up</fullName>
            </value>
            <value>
                <fullName>Upgrade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>