force-app/main/default/objects/Architecture__c/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <description>Created by: YB, Business Unit:BWTC,Purpose: for architecture app</description>
    <label>Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non Profit</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>