force-app/main/default/objects/Architecture__c/fields/Send_Survey_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>Send_Survey_to_Contact__c</fullName>
    <description>Created by: YB, Business Unit:BWTC,Purpose: for architecture app</description>
    <label>Send Survey to Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce Admin</fullName>
            </value>
            <value>
                <fullName>Executive Sponsor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>