force-app/main/default/objects/Architecture__c/fields/Service_Cloud__c.field-meta.xml
<CustomField>
    <fullName>Service_Cloud__c</fullName>
    <description>Created By:YB Business Unit:BWTC Purpose:for Architecture app</description>
    <label>Service Cloud</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ClickSoftware FSE</fullName>
            </value>
            <value>
                <fullName>Digital Engagement</fullName>
            </value>
            <value>
                <fullName>Field Service Lightning</fullName>
            </value>
            <value>
                <fullName>Service Cloud</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>