force-app/main/default/objects/Architecture__c/fields/Sponsor_Email__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Email__c</fullName>
    <description>Created by: YB, Business Unit:BWTC,Purpose: for architecture app</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Sponsor Email</label>
    <type>Email</type>
</CustomField>