force-app/main/default/objects/Architecture__c/fields/State_Province__c.field-meta.xml
<CustomField>
    <fullName>State_Province__c</fullName>
    <description>Created By:MS Business Unit:BWTC Purpose:for Architecture app</description>
    <encryptionScheme>None</encryptionScheme>
    <label>State/Province</label>
    <type>TextArea</type>
</CustomField>