force-app/main/default/objects/Architecture__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Created By:YB Business Unit:BWTC Purpose:for Architecture app</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>