force-app/main/default/objects/Architecture__c/fields/Total_Number_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Employees__c</fullName>
    <description>Created By:YB Business Unit:BWTC Purpose:for Architecture app</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Total Number of Employees</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>