force-app/main/default/objects/Architecture__c/fields/Total_Potential_Users__c.field-meta.xml
<CustomField>
    <fullName>Total_Potential_Users__c</fullName>
    <description>Created By:YB Business Unit:BWTC Purpose:</description>
    <label>Total Potential Users</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-5 users</fullName>
            </value>
            <value>
                <fullName>6-20 users</fullName>
            </value>
            <value>
                <fullName>21-100 users</fullName>
            </value>
            <value>
                <fullName>101-500 users</fullName>
            </value>
            <value>
                <fullName>501-3500 users</fullName>
            </value>
            <value>
                <fullName>3500+ users</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>