force-app/main/default/objects/Architecture__c/fields/Type_of_Website_Pick_one__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Website_Pick_one__c</fullName>
    <description>Created By:YB Business Unit:BWTC Purpose:</description>
    <label>Type of Website (Pick one)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E-Commerce</fullName>
            </value>
            <value>
                <fullName>Lead Generation</fullName>
            </value>
            <value>
                <fullName>Media/Publishing</fullName>
            </value>
            <value>
                <fullName>Membership</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Informational/Brochure</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>