force-app/main/default/objects/Architecture__c/fields/Validation_of_customer_Consent__c.field-meta.xml
<CustomField>
    <fullName>Validation_of_customer_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created By:YB Business Unit:BWTC Purpose:</description>
    <inlineHelpText>I&apos;ve obtained consent from the person whose personal data I&apos;m providing and I will share evidence of this consent with Salesforce upon request. I agree that the submission of personal data is subject to the Salesforce Partner Program Agreement.</inlineHelpText>
    <label>Validation of Customer Consent</label>
    <type>Checkbox</type>
</CustomField>