force-app/main/default/objects/Architecture__c/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <description>Created By:YB Business Unit:BWTC Purpose: for Architecture app</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Website</label>
    <type>Url</type>
</CustomField>