force-app/main/default/objects/Architecture__c/fields/Who_Should_Be_Contacted_First_Pick_one__c.field-meta.xml
<CustomField>
    <fullName>Who_Should_Be_Contacted_First_Pick_one__c</fullName>
    <description>Created by: YB, Business Unit:BWTC,Purpose: for architecture app</description>
    <label>Who Should Be Contacted First (Pick one)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Potential Customer</fullName>
            </value>
            <value>
                <fullName>Shift3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>