force-app/main/default/objects/Architecture__c/fields/Working_with_account_Executive__c.field-meta.xml
<CustomField>
    <fullName>Working_with_account_Executive__c</fullName>
    <description>Created by: MS Business Unit BWTC Purpose: for Architecture app</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Are you working with Salesforce account executive?
Enter the name of account executive</inlineHelpText>
    <label>Working with account Executive?</label>
    <type>TextArea</type>
</CustomField>