force-app/main/default/objects/Architecture__c/fields/Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Postal_Code__c</fullName>
    <description>Created By:MS BusinessUnit:BWTC Purpose:for Architecture app</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Zip/Postal Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>