force-app/main/default/objects/Architecture__c/recordTypes/SFDC.recordType-meta.xml
<RecordType>
    <fullName>SFDC</fullName>
    <active>true</active>
    <label>SFDC</label>
</RecordType>