force-app/main/default/objects/Architecture__c/recordTypes/Wordpress.recordType-meta.xml
<RecordType>
    <fullName>Wordpress</fullName>
    <active>true</active>
    <label>Wordpress</label>
</RecordType>