force-app/main/default/objects/Architecture__c/listViews/Architecture_Architecture.listView-meta.xml
<ListView>
    <fullName>Architecture_Architecture</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Project_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Architecture - All</label>
    <sharedTo>
        <group>Architecture</group>
        <role>Executive</role>
        <role>System_Administrator</role>
        <role>Tech_Consulting_Leads</role>
        <role>Tech_Consulting_Team</role>
    </sharedTo>
</ListView>