force-app/main/default/objects/Architecture__c/listViews/Completed_Partnership_Forms.listView-meta.xml
<ListView>
    <fullName>Completed_Partnership_Forms</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Project_Status__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project_Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Architecture__c.SFDC,Architecture__c.Wordpress</value>
    </filters>
    <label>Completed Partnership Forms</label>
    <sharedTo>
        <group>Architecture</group>
        <role>Executive</role>
        <role>Tech_Consulting_Leads</role>
    </sharedTo>
</ListView>