force-app/main/default/objects/Architecture__c/listViews/Incomplete_Architecture.listView-meta.xml
<ListView>
    <fullName>Incomplete_Architecture</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Project_Status__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project_Status__c</field>
        <operation>notEqual</operation>
        <value>Completed</value>
    </filters>
    <label>Incomplete Architecture</label>
    <sharedTo>
        <group>Architecture</group>
        <role>Executive</role>
        <role>Tech_Consulting_Leads</role>
    </sharedTo>
</ListView>