force-app/main/default/objects/Architecture__c/listViews/SFDC_Architecture_All.listView-meta.xml
<ListView>
    <fullName>SFDC_Architecture_All</fullName>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Project_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Architecture__c.SFDC</value>
    </filters>
    <label>SFDC Architecture - All</label>
    <sharedTo>
        <group>Architecture</group>
        <role>Executive</role>
        <role>System_Administrator</role>
        <role>Tech_Consulting_Leads</role>
        <role>Tech_Consulting_Team</role>
    </sharedTo>
</ListView>